# test

doc/: Doxyfile
doc/html/: annotated.html  argparse_8hpp__incl.map  argparse_8hpp_source.html  avatar_8cpp__incl.map  avatar_8h__dep__incl.md5  avatar_8h__incl.map  avatar_8h_source.html  class_add_item_in_inventory.js  class_add_item_in_inventory__coll__graph.map  class_add_item_in_inventory__coll__graph.md5  class_avatar-members.html  class_avatar_list_client_request__coll__graph.map  class_avatar_list_client_request__coll__graph.md5  class_avatar_list_is_ready-members.html  class_avatar_list_is_ready__inherit__graph.map  class_avatars_data_ready.js  class_avatars_data_ready__coll__graph.map  class_broadcast_message.html  class_broadcast_message__coll__graph.md5  class_broadcast_message__inherit__graph.map  class_client_session-members.html  class_client_session__inherit__graph.md5  class_controller-members.html  class_controller.html  class_controller.js  class_database-members.html  class_database.html  class_database_handler-members.html  class_database_handler__coll__graph.md5  class_database_handler__inherit__graph.map  class_disconnect_session-members.html  class_disconnect_session__inherit__graph.map  class_event-members.html  class_event.html  class_event.js  class_event_dispatcher-members.html  class_event_dispatcher.html  class_event_handler.js  class_event_queue-members.html  class_event_queue.js  (+322 more)
doc/latex/: argparse_8hpp__incl.md5  argparse_8hpp_source.tex  avatar_8cpp__incl.md5  avatar_8h.tex  avatar_8h__dep__incl.md5  class_avatar.tex  class_avatar_list_is_ready.tex  class_avatar_list_is_ready__inherit__graph.md5  class_avatars_data_ready.tex  class_avatars_data_ready__inherit__graph.md5  class_broadcast_message__inherit__graph.md5  class_client_session.tex  class_client_session__coll__graph.md5  class_controller.tex  class_controller__inherit__graph.md5  class_database_handler__coll__graph.md5  class_disconnect_session__coll__graph.md5  class_event_dispatcher.tex  class_event_handler.tex  class_event_handler__inherit__graph.md5  class_exit_game_request.tex  class_exit_game_request__inherit__graph.md5  class_exit_game_response.tex  class_exit_game_response__coll__graph.md5  class_first_connect.tex  class_game_handler.tex  class_game_handler__coll__graph.md5  class_get_avatars_data.tex  class_get_avatars_data__coll__graph.md5  class_i_exit.tex  class_i_exit__inherit__graph.md5  class_login_request.tex  class_login_request__coll__graph.md5  class_menu.tex  class_network_handler.tex  class_npc.tex  class_save_game.tex  class_start_game_server_response_sucsses.tex  class_success_check_log_pas.tex  class_success_check_log_pas__inherit__graph.md5  (+116 more)
docs/: Doxyfile  argparse_8hpp.html  argparse_8hpp.js  avatar_8cpp.html  avatar_8cpp_source.html  avatar_8h.html  avatar_8h__dep__incl.map  class_add_item_in_inventory-members.html  class_avatar_list_client_request.html  class_avatar_list_client_request.js  class_avatar_list_is_ready__coll__graph.md5  class_broadcast_message-members.html  class_broadcast_message.js  class_client_session.js  class_client_session__coll__graph.map  class_controller__coll__graph.map  class_controller__inherit__graph.md5  class_database_handler.js  class_disconnect_session.html  class_disconnect_session.js  class_event__inherit__graph.map  class_event_handler__inherit__graph.map  class_event_queue.html  class_exit_game_request__inherit__graph.map  class_exit_game_response.html  class_exit_game_response__inherit__graph.map  class_failure_check_log_pas.html  class_first_connect-members.html  class_game_handler.js  class_get_avatars_data__coll__graph.md5  class_i_exit-members.html  class_i_exit.js  class_i_input_data_provider-members.html  class_i_input_data_provider__inherit__graph.md5  class_location-members.html  class_location.html  class_location.js  class_log_pas_client_response.js  class_login_request.js  class_main_menu-members.html  (+139 more)
docs/html/: annotated_dup.js  argparse_8hpp__incl.md5  avatar_8cpp__incl.md5  avatar_8h.js  avatar_8h__incl.md5  class_add_item_in_inventory.html  class_avatar.html  class_avatar.js  class_avatar_list_client_request-members.html  class_avatar_list_is_ready.html  class_avatar_list_is_ready.js  class_avatars_data_ready-members.html  class_avatars_data_ready.html  class_avatars_data_ready__inherit__graph.md5  class_client_session.html  class_database.js  class_database_handler.html  class_disconnect_session__inherit__graph.md5  class_event__inherit__graph.md5  class_event_dispatcher.js  class_event_handler-members.html  class_event_handler.html  class_event_handler__inherit__graph.md5  class_exit_game_response-members.html  class_failure_check_log_pas.js  class_failure_check_log_pas__inherit__graph.map  class_first_connect__inherit__graph.map  class_first_connect__inherit__graph.md5  class_game_handler-members.html  class_game_handler__coll__graph.md5  class_game_logic-members.html  class_game_logic.js  class_get_avatars_data-members.html  class_get_avatars_data.js  class_get_avatars_data__coll__graph.map  class_i_exit__inherit__graph.md5  class_log_pas_client_response.html  (+166 more)
source/: CMakeLists.txt
source/client/: CMakeLists.txt  controller.cpp  controller.h  db_handler.cpp  db_handler.h  game_logic.cpp  game_logic.h  game_logic.ipp  i_inputdata.h  logger.cpp  logger.h  main.cpp  main.h  menus.cpp  menus.h  network_handler.cpp  network_handler.h  parser.cpp  parser.h  texts.h  view.cpp  view.h
source/common/: avatar.cpp  avatar.h  game_elements.h  location.cpp  location.h  location.ipp  npc.cpp  npc.h  settings.h
source/common/proto/: messages.proto
source/server/: CMakeLists.txt  database.cpp  database.h  db_handler.cpp  db_handler.h  db_handler.ipp  event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  event_handler.h  event_handler.ipp  event_queue.cpp  event_queue.h  game_handler.cpp  game_handler.h  game_handler.ipp  logger.cpp  logger.h  main.cpp  main.h  network_handler.cpp  network_handler.h  network_handler.ipp  session.cpp  session.h  user_handler.cpp  user_handler.h  user_handler.ipp
(+281 files in other folders)
